Added plot to page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
             <a href="{{ url_for('index') }}">Home</a>
         </nav>
         <h1>Index</h1>
+        {{ plot|safe }}
     </body>
 </html>
