--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <title>DataDashboard</title>
     </head>
     <body>
