--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
             <a href="{{ url_for('index') }}">Home</a>
         </nav>
         <h1>Index</h1>
-        {{ plot|safe }}
+        {{ plot1|safe }}
+        {{ plot2|safe }}
     </body>
 </html>
